commented out nav bar template and skillsBox will remove after QA to make sure not fatal errors

--- a/app/webroot/appsrc/src/templates/home.html
+++ b/app/webroot/appsrc/src/templates/home.html
@@ -369,7 +369,7 @@
 		</div>
 	</div>
 </div>
-
+<!--
 <script type="text/mustache-template" id="projectLeftNavTemplate">
 	<h1>Your Project</h1>
 
@@ -383,7 +383,7 @@
 	</ul>
 	<div class="clear"></div>
 </script>
-
+-->
 <script type="text/mustache-template" id="stageLeftNavTemplate">
 	<h1><img src="/dfcusa-pm/app/webroot/images/icon_{{stage}}_selected.png" class="stageicon">{{ucWords stage}}</h1>
   <div id="main">
@@ -516,7 +516,7 @@
 <script type="text/mustache-template" id="skillsTemplate-partial">
   <div id='skillsDisplay'>
 	{{{content.content_obj.skills.text}}}
-	 <section class="panel clearfix skillsBox">
+	<!--  <section class="panel clearfix skillsBox">
     <div class="wizard wizard-vertical clearfix" id="wizard-2">
       <ul class="steps">
 	      <li class="step active"><a href="javascript:void(0)" class="changeSkill" data-target="#all" data-skill="all"><span class="badge badge-info">1</span>{{ucWords content.stage}} Activities</a></li>
@@ -526,7 +526,7 @@
       </ul>
     </div>
     <div class="step-content">
-    	<div class="step-pane active" id="all">
+    <div class="step-pane active" id="all">
     		<ul>
     			<li>All activities in the {{ucWords content.stage}} stage are listed below.</li>
     			<li>You can also click on each skill at the left to show activities that teach that specific skill.</li>
@@ -537,7 +537,7 @@
         	{{{this.text}}}
       	</div>
       {{/content.content_obj.skills.skills}}
-    </section>
+    </section>-->
     <div class="activities leftMargin">
     </div>
   </div>
