--- a/app/webroot/appsrc/src/templates/home.html
+++ b/app/webroot/appsrc/src/templates/home.html
@@ -427,9 +427,10 @@
 <script type="text/x-handlebars-template" id="stageTemplate">
 <div id="stageCarousel" class="carousel slide stageCarousel" data-ride="carousel">
   <!-- Indicators -->
+  <div class="carousel-bottom">
   <ol class="carousel-indicators">
 
-{{#if_eq content.stage 'feel'}}
+    {{#if_eq content.stage 'feel'}}
     <li class='pan1 active' data-target="#myStageCarousel" data-slide-to="0"></li>
     <li class='pan2' data-target="#myStageCarousel" data-slide-to="1"></li>
     <li class='pan3' data-target="#myStageCarousel" data-slide-to="2"></li>
@@ -440,13 +441,17 @@
     <li class='pan3' data-target="#myStageCarousel" data-slide-to="2"></li>
     <li class='pan4' data-target="#myStageCarousel" data-slide-to="3"></li>
     <li class='pan5' data-target="#myStageCarousel" data-slide-to="4"></li>
-{{/if_eq}}
-    <br><button type="button" class="btn btn-success btn-sm skipStep">Skip This Stage</button>
+    {{/if_eq}}
+    <br>
+    <button type="button" class="btn btn-primary carouselPrev">Back</button>
+    <button type="button" class="btn btn-success btn-sm skipStep">Skip This Stage</button>
+    <button type="button" class="btn btn-primary carouselNext">Next</button>
   </ol>
+  </div>
 
   <div class="carousel-inner" role="listbox">
-{{#if_eq content.stage 'feel'}}
-   <div class="item pan1 active" rel=0>
+    {{#if_eq content.stage 'feel'}}
+    <div class="item pan1 active" rel=0>
       {{> welcome}}
     </div>
 
@@ -465,7 +470,8 @@
     <div class="item pan5" rel=4>
       {{> submit}}
     </div>
-{{else}}
+
+    {{else}}
     <div class="item pan1" rel=0>
       Go Back a stage?
     </div>
@@ -485,22 +491,20 @@
     <div class="item pan5" rel=4>
       {{> submit}}
     </div>
-{{/if_eq}}
+    {{/if_eq}}
   </div>
-
-
 </div>
 
-    <!-- Left and right controls -->
-   <a class="left carousel-control prevSlide" href="#myStageCarousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control nextSlide" href="#myStageCarousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
+  <!-- Left and right controls -->
+ <a class="left carousel-control prevSlide" href="#myStageCarousel" role="button" data-slide="prev">
+
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control nextSlide" href="#myStageCarousel" role="button" data-slide="next">
+
+    <span class="sr-only">Next</span>
+  </a>
+
 
 
 </script>
