--- a/app/webroot/appsrc/src/templates/home.html
+++ b/app/webroot/appsrc/src/templates/home.html
@@ -444,9 +444,10 @@
     {{/if_eq}}
     <br>
     <button type="button" class="btn btn-primary carouselPrev">Back</button>
-    <button type="button" class="btn btn-success btn-sm skipStep">Skip This Stage</button>
-    <button type="button" class="btn btn-primary carouselNext">Next</button>
+    <button type="button" class="btn btn-success btn-sm skipStep hide">Skip This Stage</button>
     <button type="button" class="btn btn-primary carouselDeliverables">Enter Deliverables</button>
+    <button type="button" class="btn btn-primary carouselNext">Next</button>
+
   </ol>
   </div>
 
