save captuturures input

--- a/app/webroot/appsrc/src/templates/home.html
+++ b/app/webroot/appsrc/src/templates/home.html
@@ -935,13 +935,13 @@
             <input type="radio" name="options" id="option3" autocomplete="off"> Do
           </label>
           <label class="btn btn-primary">
-            <input type="radio" name="options" id="option3" autocomplete="off"> Share
+            <input type="radio" name="options" id="option4" autocomplete="off"> Share
           </label>
         </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-primary saveFidsCheck">Save changes</button>
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
